{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 196,
  "lineage": "5887fd8b-f7d6-62a4-90eb-a8e7d32f217e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:686862068968:transit-gateway/tgw-09748c3823a265782",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "tgw setup with terraform",
            "dns_support": "enable",
            "id": "tgw-09748c3823a265782",
            "owner_id": "686862068968",
            "tags": {
              "Name": "transit-gw"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw-rte",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-092c39886ee26f9b9_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-0240de7094cf31d4a",
            "transit_gateway_route_table_id": "tgw-rtb-092c39886ee26f9b9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw-rtable",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att",
            "aws_subnet.private_subnets",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw-rte2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.0.0.0/24",
            "id": "tgw-rtb-092c39886ee26f9b9_10.0.0.0/24",
            "transit_gateway_attachment_id": "tgw-attach-06c1c42cbe4466e6a",
            "transit_gateway_route_table_id": "tgw-rtb-092c39886ee26f9b9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw-rtable",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att2",
            "aws_subnet.vpc2-private_subnets",
            "aws_vpc.tgw-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw-rte3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "15.0.0.0/24",
            "id": "tgw-rtb-092c39886ee26f9b9_15.0.0.0/24",
            "transit_gateway_attachment_id": "tgw-attach-0240de7094cf31d4a",
            "transit_gateway_route_table_id": "tgw-rtb-092c39886ee26f9b9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw-rtable",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att",
            "aws_subnet.private_subnets",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-rtable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-092c39886ee26f9b9",
            "transit_gateway_id": "tgw-09748c3823a265782"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-092c39886ee26f9b9_tgw-attach-0240de7094cf31d4a",
            "resource_id": "vpc-02d0edbf04f4e60d0",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0240de7094cf31d4a",
            "transit_gateway_route_table_id": "tgw-rtb-092c39886ee26f9b9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw-rtable",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att",
            "aws_subnet.private_subnets",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rta2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-092c39886ee26f9b9_tgw-attach-06c1c42cbe4466e6a",
            "resource_id": "vpc-08788d1bed0714dae",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-06c1c42cbe4466e6a",
            "transit_gateway_route_table_id": "tgw-rtb-092c39886ee26f9b9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_ec2_transit_gateway_route_table.tgw-rtable",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att2",
            "aws_subnet.vpc2-private_subnets",
            "aws_vpc.tgw-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0240de7094cf31d4a",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-08651f0ff09dfe4d2",
              "subnet-0c644371ebedcfc0e"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-09748c3823a265782",
            "vpc_id": "vpc-02d0edbf04f4e60d0",
            "vpc_owner_id": "686862068968"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.private_subnets",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-06c1c42cbe4466e6a",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0012f5607dd425614",
              "subnet-08d84c34d4778d765"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-09748c3823a265782",
            "vpc_id": "vpc-08788d1bed0714dae",
            "vpc_owner_id": "686862068968"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.vpc2-private_subnets",
            "aws_vpc.tgw-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b76698ad5b9cae12",
            "domain": "vpc",
            "id": "eipalloc-0ce1aa21d6a22cdae",
            "network_interface": "eni-0e17a9924c4e092c0",
            "private_dns": "ip-15-0-0-25.ec2.internal",
            "private_ip": "15.0.0.25",
            "public_dns": "ec2-35-153-152-146.compute-1.amazonaws.com",
            "public_ip": "35.153.152.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "access_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d8b5222f2b93bf0",
            "arn": "arn:aws:ec2:us-east-1:686862068968:instance/i-0aafd4b4a0143dc8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aafd4b4a0143dc8d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ayos-windows-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-092af4dc6c1dee910",
            "private_dns": "ip-15-0-0-197.ec2.internal",
            "private_ip": "15.0.0.197",
            "public_ip": "54.167.0.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07d36b9caabad9cfb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d649a367150e147b",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a6784c7a4c11b7dc"
            ]
          },
          "dependencies": [
            "aws_security_group.tgw-pub-sg",
            "aws_subnet.public_subnets",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv-access_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d8b5222f2b93bf0",
            "arn": "arn:aws:ec2:us-east-1:686862068968:instance/i-0158aeddbff63470f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0158aeddbff63470f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ayos-windows-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-037540e33a58ea884",
            "private_dns": "ip-10-0-0-81.ec2.internal",
            "private_ip": "10.0.0.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0714675f3f91b2952",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0012f5607dd425614",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09072254d73dc3486"
            ]
          },
          "dependencies": [
            "aws_security_group.tgw-prv-sg",
            "aws_subnet.vpc2-private_subnets",
            "aws_vpc.tgw-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:internet-gateway/igw-0f72f3f9d2ea5b42a",
            "id": "igw-0f72f3f9d2ea5b42a",
            "owner_id": "686862068968",
            "tags": {
              "Name": "tgw-igw"
            },
            "vpc_id": "vpc-02d0edbf04f4e60d0"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce1aa21d6a22cdae",
            "id": "nat-0079a8f57ea330100",
            "network_interface_id": "eni-0e17a9924c4e092c0",
            "private_ip": "15.0.0.25",
            "public_ip": "35.153.152.146",
            "subnet_id": "subnet-0d649a367150e147b",
            "tags": {
              "Name": "tgw NAT"
            }
          },
          "dependencies": [
            "aws_eip.pub1",
            "aws_subnet.public_subnets",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc2_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07e13a230e4d41db6",
            "owner_id": "686862068968",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-09748c3823a265782",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc2_private_rt"
            },
            "vpc_id": "vpc-08788d1bed0714dae"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_vpc.tgw-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0efc798f87f29d7fe",
            "owner_id": "686862068968",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0079a8f57ea330100",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_private_rt"
            },
            "vpc_id": "vpc-02d0edbf04f4e60d0"
          },
          "dependencies": [
            "aws_nat_gateway.gw1",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-096b7dbd56ce9fbc5",
            "owner_id": "686862068968",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f72f3f9d2ea5b42a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-09748c3823a265782",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc_public_rt"
            },
            "vpc_id": "vpc-02d0edbf04f4e60d0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_internet_gateway.gw",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7773e1400af0735",
            "route_table_id": "rtb-096b7dbd56ce9fbc5",
            "subnet_id": "subnet-0d649a367150e147b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_internet_gateway.gw",
            "aws_route_table.vpc_public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbb4f6ed60d6c342",
            "route_table_id": "rtb-07e13a230e4d41db6",
            "subnet_id": "subnet-0012f5607dd425614"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_route_table.vpc2_private_rt",
            "aws_subnet.vpc2-private_subnets",
            "aws_vpc.tgw-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_prv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f50071f6aac88a41",
            "route_table_id": "rtb-0efc798f87f29d7fe",
            "subnet_id": "subnet-08651f0ff09dfe4d2"
          },
          "dependencies": [
            "aws_eip.pub1",
            "aws_nat_gateway.gw1",
            "aws_route_table.vpc_private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tgw-prv-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:security-group/sg-09072254d73dc3486",
            "description": "Allow access to bastion in public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09072254d73dc3486",
            "ingress": [
              {
                "cidr_blocks": [
                  "15.0.0.0/16"
                ],
                "description": "SSH Access",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "15.0.0.0/24",
                  "142.116.203.156/32"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "15.0.0.0/24"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ayos-tgw-prv-sg",
            "name_prefix": "",
            "owner_id": "686862068968",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_access_to_prv"
            },
            "timeouts": null,
            "vpc_id": "vpc-08788d1bed0714dae"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tgw-pub-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:security-group/sg-0a6784c7a4c11b7dc",
            "description": "Allow access to bastion in public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6784c7a4c11b7dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "icmp Access",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "15.0.0.0/24",
                  "142.116.203.156/32"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "15.0.0.0/24"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ayos-tgw-pub-sg",
            "name_prefix": "",
            "owner_id": "686862068968",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d0edbf04f4e60d0"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:subnet/subnet-08651f0ff09dfe4d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "15.0.2.0/24",
            "id": "subnet-08651f0ff09dfe4d2",
            "map_public_ip_on_launch": false,
            "owner_id": "686862068968",
            "tags": {
              "Name": "prv-1a"
            },
            "vpc_id": "vpc-02d0edbf04f4e60d0"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:subnet/subnet-0c644371ebedcfc0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "15.0.3.0/24",
            "id": "subnet-0c644371ebedcfc0e",
            "map_public_ip_on_launch": false,
            "owner_id": "686862068968",
            "tags": {
              "Name": "prv-1b"
            },
            "vpc_id": "vpc-02d0edbf04f4e60d0"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:subnet/subnet-0d649a367150e147b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "15.0.0.0/24",
            "id": "subnet-0d649a367150e147b",
            "map_public_ip_on_launch": false,
            "owner_id": "686862068968",
            "tags": {
              "Name": "pub-1a"
            },
            "vpc_id": "vpc-02d0edbf04f4e60d0"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:subnet/subnet-0639ac7d342cb4e23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "15.0.1.0/24",
            "id": "subnet-0639ac7d342cb4e23",
            "map_public_ip_on_launch": false,
            "owner_id": "686862068968",
            "tags": {
              "Name": "pub-1b"
            },
            "vpc_id": "vpc-02d0edbf04f4e60d0"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc2-private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:subnet/subnet-0012f5607dd425614",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0012f5607dd425614",
            "map_public_ip_on_launch": false,
            "owner_id": "686862068968",
            "tags": {
              "Name": "prv-1a"
            },
            "vpc_id": "vpc-08788d1bed0714dae"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:subnet/subnet-08d84c34d4778d765",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08d84c34d4778d765",
            "map_public_ip_on_launch": false,
            "owner_id": "686862068968",
            "tags": {
              "Name": "prv-1b"
            },
            "vpc_id": "vpc-08788d1bed0714dae"
          },
          "dependencies": [
            "aws_vpc.tgw-vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tgw-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:vpc/vpc-02d0edbf04f4e60d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "15.0.0.0/16",
            "default_network_acl_id": "acl-0875aae770d37a590",
            "default_route_table_id": "rtb-09708494e08e61275",
            "default_security_group_id": "sg-00a72ce9db5d35254",
            "dhcp_options_id": "dopt-2ff7a154",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02d0edbf04f4e60d0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09708494e08e61275",
            "owner_id": "686862068968",
            "tags": {
              "Name": "tgw-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tgw-vpc2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686862068968:vpc/vpc-08788d1bed0714dae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7995a2acb62f708",
            "default_route_table_id": "rtb-08768796a706c9bc2",
            "default_security_group_id": "sg-0d61b858984b09aac",
            "dhcp_options_id": "dopt-2ff7a154",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08788d1bed0714dae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08768796a706c9bc2",
            "owner_id": "686862068968",
            "tags": {
              "Name": "tgw2-vpc"
            }
          }
        }
      ]
    }
  ]
}